--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.14.6",
+    "axios": "^1.6.2",
     "firebase": "^10.7.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -18,7 +20,9 @@
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
-    "sort-by": "^1.2.0"
+    "react-toastify": "^9.1.3",
+    "sort-by": "^1.2.0",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
